CVSL-1212 BASS to CAS2 content change in Curfew address check form

--- a/server/views/forms/includes/bassArea.pug
+++ b/server/views/forms/includes/bassArea.pug
@@ -1,5 +1,5 @@
 div.no-break.smallPaddingBottom#bassArea
-  h2 BASS Case
+  h2 CAS2 Case
   p Proposed area for release
     table.wide.noborder
       if (bassRequest.specificArea === 'Yes')
@@ -10,7 +10,7 @@ div.no-break.smallPaddingBottom#bassArea
           td County
           td.entry #{bassRequest.proposedCounty}
         tr
-          td Is this BASS area approved?
+          td Is this CAS2 area approved?
           td.entry #{bassAreaCheck.bassAreaSuitable}
       else
         tr
