--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -36,8 +36,8 @@ block content
 
       div.pure-u-1.pure-u-md-1-2.paddingBottom
         p.smallMarginBottom Reason for rejection:
-        if addressReview.consent === 'No'
-          p.bold The homeowner/landlord does not give informed consent
+        if addressReview.consent === 'No' || addressReview.consentHavingSpoken === 'No'
+          p#rejectionConsentNotGiven.bold The homeowner/landlord does not give informed consent
         if risk.proposedAddressSuitable === 'No'
           p.bold The address has been deemed unsuitable
           if risk.unsuitableReason
