CVSL-1255 add new standard conditions to licence views

--- a/server/views/licences/includes/licenceMixins.pug
+++ b/server/views/licences/includes/licenceMixins.pug
@@ -100,6 +100,29 @@ mixin curfewConditions()
     | a new job), you must contact the Prison Service establishment from which you were released.  A contact number is
     | attached at the bottom of this licence.
 
+mixin standardConditions()
+  li Be of good behaviour and not behave in a way which undermines the purpose of the licence period;
+  li Not commit any offence;
+  li Keep in touch with the supervising officer in accordance with instructions given by the supervising officer;
+  li Receive visits from the supervising officer in accordance with instructions given by the supervising officer;
+
+  li
+    | Reside permanently at an address approved by the supervising officer and obtain the prior permission
+    | of the supervising officer for any stay of one or more nights at a different address;
+
+  li
+    |  Not undertake work, or a particular type of work, unless it is approved by the supervising officer
+    | and notify the supervising officer in advance of any proposal to undertake work or a particular type of work;
+
+  li
+    | Not travel outside the United Kingdom, the Channel Islands or the Isle of Man, except with the
+    | prior permission of the supervising officer or for the purposes of immigration deportation or removal;
+
+  li
+    | Tell your supervising officer if you use a name which is different to the name or names which appear on your licence
+
+  li
+    | Tell your supervising officer if you change or add any contact details, including phone number or email
 
 mixin probationSupervision(CONDITIONS, SENT_LED, SENT_SED)
   div.smallPaddingBottom
@@ -112,22 +135,7 @@ mixin probationSupervision(CONDITIONS, SENT_LED, SENT_SED)
 
     li.no-break While under supervision you must:
       ol.roman.start
-        li Be of good behaviour and not behave in a way which undermines the purpose of the licence period;
-        li Not commit any offence;
-        li Keep in touch with the supervising officer in accordance with instructions given by the supervising officer;
-        li Receive visits from the supervising officer in accordance with instructions given by the supervising officer;
-
-        li
-          | Reside permanently at an address approved by the supervising officer and obtain the prior permission
-          | of the supervising officer for any stay of one or more nights at a different address;
-
-        li
-          |  Not undertake work, or a particular type of work, unless it is approved by the supervising officer
-          | and notify the supervising officer in advance of any proposal to undertake work or a particular type of work;
-
-        li
-          | Not travel outside the United Kingdom, the Channel Islands or the Isle of Man, except with the
-          | prior permission of the supervising officer or for the purposes of immigration deportation or removal;
+        +standardConditions()
 
         div.pre.conditions
           br
