--- a/server/views/licences/hdc_ap_pss.pug
+++ b/server/views/licences/hdc_ap_pss.pug
@@ -66,22 +66,7 @@ block content
 
     li.no-break During your licence period you must:
       ol.roman.start
-        li Be of good behaviour and not behave in a way which undermines the purpose of the licence period;
-        li Not to commit any offence;
-        li Keep in touch with the supervising officer in accordance with instructions given by the supervising officer;
-        li Receive visits from the supervising officer in accordance with instructions given by the supervising officer;
-
-        li
-          | Reside permanently at an address approved by the supervising officer and obtain the prior permission of
-          | the supervising officer for any stay of one or more nights at a different address;
-
-        li
-          | Not undertake work, or a particular type of work, unless it is approved by the supervising officer and
-          | notify the supervising officer in advance of any proposal to undertake work or a particular type of work;
-
-        li
-          | Not travel outside the United Kingdom, the Channel Islands or the Isle of Man, except with the prior
-          | permission of the supervising officer or for the purposes of immigration deportation or removal;
+        +standardConditions()
 
         div.pre.conditions
           br
