CVSL-1370 add cases sitting with com data extractor

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -22,6 +22,8 @@ block content
       div
         a(href='/admin/licenceSearch') Search for licence
       div
+        a(href='/admin/licencesWithCOM') Download licences sitting with COM users
+      div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
 
       div.pure-u-1.sm-padTop55
