--- a/server/views/admin/licences/licencesWithCOMDownload.pug
+++ b/server/views/admin/licences/licencesWithCOMDownload.pug
@@ -17,5 +17,5 @@ block content
           div.pure-g.u-paddingBottom
             input.requiredButton.button(text="Download" type="submit")
             div.pure-u-sm-5-12
-      iframe(src="/admin/licencesWithCOM" style="display:none;visibility:hidden")
+      iframe(src="/admin/downloadLicencesWithCOM" style="display:none;visibility:hidden")
       
