CVSL-1370 fix button for firefox view (#1507)
* CVSL-1370 fix button for firefox view

* CVSL-1370 pug end of file spacing fix

* CVSL-1370 pug end of file spacing fix

--- a/server/views/admin/licences/licencesWithCOMDownload.pug
+++ b/server/views/admin/licences/licencesWithCOMDownload.pug
@@ -15,7 +15,6 @@ block content
 
         div.pure-u-2-3.midPaddingBottom
           div.pure-g.u-paddingBottom
-            input.requiredButton.button(text="Download" type="submit")
+            input.requiredButton.button(text="Download" type="submit" value="Submit")
             div.pure-u-sm-5-12
       iframe(src="/admin/downloadLicencesWithCOM" style="display:none;visibility:hidden")
-      
