CVSL-1370 rename com cases data extractor copy

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -22,7 +22,7 @@ block content
       div
         a(href='/admin/licenceSearch') Search for licence
       div
-        a(href='/admin/downloadLicencesWithCOM') Download licences sitting with COM users
+        a(href='/admin/downloadLicencesWithCOM') Download HDC cases sitting with COM users
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
 
