--- a/server/views/admin/licences/licencesWithCOMDownload.pug
+++ b/server/views/admin/licences/licencesWithCOMDownload.pug
@@ -8,7 +8,7 @@ block content
 
   div.pure-g
     div.pure-u-1.largeMarginTop
-      h2.heading-medium Download licences sitting with COM
+      h2.heading-medium Download HDC cases sitting with COM
 
       form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
