--- a/server/views/admin/licences/licencesWithCOMDownload.pug
+++ b/server/views/admin/licences/licencesWithCOMDownload.pug
@@ -8,7 +8,7 @@ block content
 
   div.pure-g
     div.pure-u-1.largeMarginTop
-      h2.heading-medium Download licences sitting with COM
+      h2.heading-medium Download HDC cases sitting with COM
 
       form(method="post")
         input(type="hidden" name="_csrf" value=csrfToken)
@@ -17,4 +17,4 @@ block content
           div.pure-g.u-paddingBottom
             input.requiredButton.button(text="Download" type="submit" value="Submit")
             div.pure-u-sm-5-12
-      iframe(src="/admin/downloadLicencesWithCOM" style="display:none;visibility:hidden")
+      iframe(src="/admin/downloadCasesWithCOM" style="display:none;visibility:hidden")
