PI-1508 Migrate to the new Delius integration API
This is part of the move to deprecate Community API. The new API endpoints used in this PR are provided by the dedicated integration service for [HDC Licences and Delius](https://ministryofjustice.github.io/hmpps-probation-integration-services/tech-docs/projects/hdc-licences-and-delius/api-reference.html). The data returned by this API should be the same as before, but please reach out to us on Slack at [#probation-integration-tech](https://moj.enterprise.slack.com/archives/C02HQ4M2YQN) if you see any problems.

--- a/server/views/admin/users/migrate.pug
+++ b/server/views/admin/users/migrate.pug
@@ -41,13 +41,13 @@ block content
           h3.heading-medium Delius record
           if deliusUser
             div.pure-u-1-3 Name
-            div.pure-u-2-3.bold #{deliusUser.staff.forenames} #{deliusUser.staff.surname}
+            div.pure-u-2-3.bold #{deliusUser.name.forenames} #{deliusUser.name.surname}
 
             div.pure-u-1-3 Delius staff code
-            div.pure-u-2-3.bold #{deliusUser.staffCode}
+            div.pure-u-2-3.bold #{deliusUser.code}
 
             div.pure-u-1-3 Delius staff identifier
-            div.pure-u-2-3.bold #{deliusUser.staffIdentifier}
+            div.pure-u-2-3.bold #{deliusUser.staffId}
 
             if !flags.includes('UNLINKED_ACCOUNT')
                 div.pure-u-1-3 Delius username
