CVSL-1947 rename curfew conditions recall code

--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -22,8 +22,8 @@ block excludedForm
         label(for='communityCurfew') Serving a sentence for breach of the curfew requirement of a
           |  Community Order
       div.multiple-choice
-        input(type='checkbox' name='reason[]' id='hdcCurfewConditions' value='hdcCurfewConditions' checked=vals.indexOf('hdcCurfewConditions') !== -1)
-        label(for='hdcCurfewConditions') Recalled to prison for failing to comply with their HDC curfew conditions within 2 years of their current sentence date
+        input(type='checkbox' name='reason[]' id='curfewConditionsRecall' value='curfewConditionsRecall' checked=vals.indexOf('curfewConditionsRecall') !== -1)
+        label(for='curfewConditionsRecall') Recalled to prison for failing to comply with their HDC curfew conditions within 2 years of their current sentence date
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='deportation' value='deportation' checked=vals.indexOf('deportation') !== -1)
         label(for='deportation') Foreign national offender recommended for deportation by
