CVSL-1997 ineligible two thirds release reason content change

--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -39,7 +39,7 @@ block excludedForm
         label(for='cja2003_19ZA') Offender currently serving for a specified terrorism or terrorism connected offence
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='twoThirdsRelease' value='twoThirdsRelease' checked=vals.indexOf('twoThirdsRelease') !== -1)
-        label(for='twoThirdsRelease') Only eligible for release after serving two-thirds of their sentence – SDS+, DYOI+ or S250+
+        label(for='twoThirdsRelease') Serving a sentence subject to two-thirds release criteria (SDS+, DYOI+ or S250+) or would be serving one if they had been sentenced after the Police and Crime Sentencing Act was introduced
       div.multiple-choice
         input(type='checkbox' name='reason[]' id='notice_244zb' value='notice_244zb' checked=vals.indexOf('notice_244zb') !== -1)
         label(for='notice_244zb') A notice under section 244ZB has been served and is still in force
