--- a/server/views/admin/licences/view.pug
+++ b/server/views/admin/licences/view.pug
@@ -10,6 +10,6 @@ block content
     { field: 'notifyError' },
   ])
 
-  h1.heading-large Licence details
+  h1.heading-large Offender details 
   include ../../taskList/prisonerDetails
   include ./activity
