--- a/server/views/admin/licences/activity.pug
+++ b/server/views/admin/licences/activity.pug
@@ -55,9 +55,9 @@ mixin assignedTo(val)
 
 div.borderBottom.paddingBottom
   
-  h2.heading-medium Licence status
+  h2.heading-medium Case status
     if licence.deleted_at !== null 
-    span.alert.bold.right [DELETED]&nbsp;
+      span.alert.bold.right [DELETED]&nbsp;
 
   div.pure-g
     div.pure-u-1.pure-u-md-1-2
@@ -76,12 +76,13 @@ div.borderBottom.paddingBottom
         span
           a(href='/admin/licences/' + licenceId + '/raw') View raw
     div.pure-u-1.pure-u-md-1-2
-        if licence && licence.stage === 'PROCESSING_RO'      
+        if licence && licence.stage === 'PROCESSING_RO' && !licence.deleted_at 
             div.alignRight
                 a.button.smallMarginBottom(href='/admin/licences/' + licence.bookingId + '/notifyRo') Notify COM of case handover
-                 
-        div.alignRight
-            a.button(id='reset-licence'  href='/admin/licences/events/' + licence.bookingId + '/reset-licence') Reset licence
+        
+        if licence && licence.deleted_at == null          
+            div.alignRight
+                a.button(id='reset-licence'  href='/admin/licences/events/' + licence.bookingId + '/reset-licence') Reset licence
 div.borderBottom.paddingBottom
 
   h2.heading-medium HDC activity for booking: #{licence.bookingId}
