--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -25,6 +25,8 @@ block content
         a(href='/admin/downloadCasesWithCOM') Download HDC cases sitting with COM users
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
+      div
+        a(href='/admin/completionDestinationSearch') Set licence completion destination
 
       div.pure-u-1.sm-padTop55
         if showExitUrl
