CVSL-2330 renaming of some user facing content - complete -> create

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -26,7 +26,7 @@ block content
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
       div
-        a(href='/admin/completionDestinationSearch') Set licence completion destination
+        a(href='/admin/completionDestinationSearch') Set licence creation destination
 
       div.pure-u-1.sm-padTop55
         if showExitUrl
