--- a/server/views/admin/licences/activity.pug
+++ b/server/views/admin/licences/activity.pug
@@ -8,10 +8,10 @@ mixin detail(type, details)
         + notify(details)
     when 'RESET'
         | Licence has been reset
-    when 'COMPLETE_IN_HDC'
-        | Licence to be completed in HDC
-    when 'COMPLETE_IN_CVL'
-        | Licence to be completed in CVL
+    when 'CREATE_IN_HDC'
+        | Licence to be created in HDC
+    when 'CREATE_IN_CVL'
+        | Licence to be created in CVL
     default
         | &nbsp;   
 
