CVSL-2330 add licenceInCvl to client call, service and status decision (#1573)
* CVSL-2330 add licenceInCvl to client call, service and status decision

* CVSL-2330 add unit test

* CVSL-2330 add update licenceInCvl distinguisher client call

* CVSL-2330 add licence completion destination admin page and logic to update licenceInCvl distinguisher

* CVSL-2330 add end line to pug file

* CVSL-2330 add audit events to distinguisher update

* CVSL-2330 renaming of some user facing content - complete -> create

* CVSL-2330 fix test

* CVSL-2330 edit client calls for set approved version and set the licence in cvl distinguisher

---------

Co-authored-by: gurpreet.singh <gurpreet.singh@digital.justice.gov.uk>
Co-authored-by: Gurps Singh <60613823+gurps-singh@users.noreply.github.com>

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -25,6 +25,8 @@ block content
         a(href='/admin/downloadCasesWithCOM') Download HDC cases sitting with COM users
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
+      div
+        a(href='/admin/completionDestinationSearch') Set licence creation destination
 
       div.pure-u-1.sm-padTop55
         if showExitUrl
