--- a/server/views/reports/comAssignedLicencesForHandoverReport.pug
+++ b/server/views/reports/comAssignedLicencesForHandoverReport.pug
@@ -1,5 +1,5 @@
-extends layout
-include includes/errorBannerWithDetail
+extends ../layout
+include ../includes/errorBannerWithDetail
 
 block content
 
