CVSL-2389 add route and view for new report

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -24,6 +24,8 @@ block content
       div
         a(href='/admin/downloadCasesWithCOM') Download HDC cases sitting with COM users
       div
+        a(href='/admin/downloadCasesWithCA') Download HDC cases sitting with CA users
+      div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
       div
         a(href='/admin/completionDestinationSearch') Set licence creation destination
