--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -24,7 +24,7 @@ block content
       div
         a(href='/admin/downloadCasesWithCOM') Download HDC cases sitting with COM users
       div
-        a(href='/admin/downloadCasesWithCA') Download HDC cases sitting with CA users
+        a(href='/admin/downloadCasesWithCA') Download HDC cases sitting with Prison Case Admin users
       div
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
       div
