--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -16,7 +16,7 @@ block content
           h2.heading-large.noMargin Case list
         div.pure-u-1.pure-u-md-1-2.form-group
           input.front-end-control.form-control(type="text" id="caseListFilter" placeholder="Search your case list" title="Filter the case list by text content")
-        if user.role === 'CA'
+        if (user.role === 'CA' && caReportsLinkEnabled)
           div.pure-u-1
               a(href="/hdc/people-ready-for-probation-checks").reports-link Download list of people who are ready for probation checks
         div#tabBar.pure-u-1.form-group.center.smallMarginTop
