CVSL-2441 some renaming, add ca report link to case list and combine report links on one page (#1584)
* CVSL-2441 some renaming, add ca report link to caselist and combine report links on one page

* CVSL-2441 removed unneccessary files

* CVSL-2441 removed further unneeded code

* CVSL-2441 fix browser-tools in circleci config to only install chrome

* CVSL-2441 add caReportsLinkEnabled feature flag

* CVSL-2441 add tests for report link and feature flag

* CVSL-2441 fix for prisoners with no probation details to be included on unallocated com report

--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -16,8 +16,10 @@ block content
           h2.heading-large.noMargin Case list
         div.pure-u-1.pure-u-md-1-2.form-group
           input.front-end-control.form-control(type="text" id="caseListFilter" placeholder="Search your case list" title="Filter the case list by text content")
-
-        div#tabBar.pure-u-1.form-group.center
+        if (user.role === 'CA' && caReportsLinkEnabled)
+          div.pure-u-1
+              a(href="/hdc/people-ready-for-probation-checks" id="caReportsLink").reports-link Download list of people who are ready for probation checks
+        div#tabBar.pure-u-1.form-group.center.smallMarginTop
           ul
             li(class=tab === 'active' ? 'selected' : undefined)
               a(href="/caseList/active") Active
