--- a/server/views/includes/back-caselist-and-forms.pug
+++ b/server/views/includes/back-caselist-and-forms.pug
@@ -2,4 +2,4 @@ div.back-link-container.smallPaddingTop
   div.pure-u-1-2
     a#backBtn.link-back(href="/") Back to case list
   div.pure-u-1-2.alignRight
-    a(href="/hdc/forms/" + bookingId).forms-link Forms
+    a(href="/hdc/forms/" + bookingId).forms-link Download forms
