--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -29,6 +29,8 @@ block content
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
       div
         a(href='/admin/completionDestinationSearch') Set licence creation destination
+      div
+        a(href='/admin/conditionCompareTextsSearch') Compare condition texts
 
       div.pure-u-1.sm-padTop55
         if showExitUrl
